hphp/hack/test/typecheck/incorrect_tparam_arity.php.exp
File "incorrect_tparam_arity.php", line 4, characters 21-27:
The type C expects 1 type parameter(s) (Typing[4101])
File "incorrect_tparam_arity.php", line 7, characters 7-7:
Definition is here
